# exafmm-t

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  Makefile.am.include  Makefile.in  Precomp_laplace_grad_m4_f.data  README.md  TIME  TODO  TODO.md  aclocal.m4  autogen.sh  bootstrap  compile.html  config.h.in  configure  configure.ac  documentation.html  examples.html  genindex.html  history.md  index.html  intro.html  job.sh  main.cpp  main.cxx  main.do  main_c.cpp  objects.inv  paper.bib  paper.md  search.html  searchindex.js  setup.py  (+1 more)
_sources/: compile.rst.txt
_sources/api/: class_view_hierarchy.rst.txt  classexafmm__t_1_1Args.rst.txt  classexafmm__t_1_1DummyFmm.rst.txt  classexafmm__t_1_1Fmm.rst.txt  classexafmm__t_1_1FmmBase.rst.txt  classexafmm__t_1_1FmmScaleInvariant.rst.txt  classexafmm__t_1_1HelmholtzFmm.rst.txt  classexafmm__t_1_1LaplaceFmm.rst.txt  classexafmm__t_1_1ModifiedHelmholtzFmm.rst.txt  classexafmm__t_1_1vec.rst.txt  define_exafmm__t_8h_1a23827995db6fe72971b2e4d8d2543819.rst.txt  define_exafmm__t_8h_1a29080d09fb8c9cf06cb6ba9b009894a6.rst.txt  define_exafmm__t_8h_1a69def9fdb2e3c91ede6c181000c7807e.rst.txt  define_exafmm__t_8h_1a85ecf21c1fbabd1f824a9fd1de5a1f01.rst.txt  define_exafmm__t_8h_1a87424cbce2033b800147a13d28c55798.rst.txt  define_exafmm__t_8h_1a9a7a2e46b7b2f35066a9d21d65af4f83.rst.txt  define_exafmm__t_8h_1ac5fd334e16e0f5c6d3bb17e4e412351c.rst.txt  define_exafmm__t_8h_1ad389d9fca48a755ec90ffd93286e85a4.rst.txt  define_exafmm__t_8h_1ae1ed766915188a6af6e713556d6f2ed5.rst.txt  define_exafmm__t_8h_1af4d5f688e07c30608af91fe76584ce86.rst.txt  define_hilbert_8h_1aa708d6faae9e312e7f22a8358244e3b2.rst.txt  define_vec_8h_1a9ee7be9d3d463c6449f037d3525aebad.rst.txt  dir_include.rst.txt  enum_exafmm__t_8h_1a90321ace254beb0e9eacd5517ae3a4b4.rst.txt  enum_namespaceexafmm__t_1a90321ace254beb0e9eacd5517ae3a4b4.rst.txt  file_include_align.h.rst.txt  file_include_args.h.rst.txt  file_include_build_list.h.rst.txt  file_include_build_non_adaptive_tree.h.rst.txt  file_include_build_tree.h.rst.txt  (+238 more)
api/: class_view_hierarchy.html  classexafmm__t_1_1Args.html  classexafmm__t_1_1DummyFmm.html  classexafmm__t_1_1Fmm.html  classexafmm__t_1_1FmmBase.html  classexafmm__t_1_1FmmScaleInvariant.html  classexafmm__t_1_1HelmholtzFmm.html  classexafmm__t_1_1LaplaceFmm.html  classexafmm__t_1_1ModifiedHelmholtzFmm.html  classexafmm__t_1_1vec.html  define_exafmm__t_8h_1a23827995db6fe72971b2e4d8d2543819.html  define_exafmm__t_8h_1a29080d09fb8c9cf06cb6ba9b009894a6.html  define_exafmm__t_8h_1a69def9fdb2e3c91ede6c181000c7807e.html  define_exafmm__t_8h_1a85ecf21c1fbabd1f824a9fd1de5a1f01.html  define_exafmm__t_8h_1a87424cbce2033b800147a13d28c55798.html  define_exafmm__t_8h_1a9a7a2e46b7b2f35066a9d21d65af4f83.html  define_exafmm__t_8h_1ac5fd334e16e0f5c6d3bb17e4e412351c.html  define_exafmm__t_8h_1ad389d9fca48a755ec90ffd93286e85a4.html  define_exafmm__t_8h_1ae1ed766915188a6af6e713556d6f2ed5.html  define_exafmm__t_8h_1af4d5f688e07c30608af91fe76584ce86.html  define_hilbert_8h_1aa708d6faae9e312e7f22a8358244e3b2.html  define_vec_8h_1a9ee7be9d3d463c6449f037d3525aebad.html  dir_include.html  enum_exafmm__t_8h_1a90321ace254beb0e9eacd5517ae3a4b4.html  enum_namespaceexafmm__t_1a90321ace254beb0e9eacd5517ae3a4b4.html  file_include_align.h.html  file_include_args.h.html  file_include_build_list.h.html  file_include_build_non_adaptive_tree.h.html  file_include_build_tree.h.html  file_include_dataset.h.html  file_include_exafmm_t.h.html  file_include_fmm.h.html  file_include_fmm_base.h.html  file_include_fmm_scale_invariant.h.html  file_include_geometry.h.html  file_include_helmholtz.h.html  file_include_hilbert.h.html  file_include_intrinsics.h.html  file_include_laplace.h.html  (+229 more)
cmake-modules/: FindFFTW.cmake
docs/: Doxyfile  Makefile  conf.py  documentation.rst  examples.rst  index.rst  intro.rst  requirements.txt
examples/: helmholtz_example.ipynb  laplace_example.ipynb  modified_helmholtz_example.ipynb
examples/cpp/: Makefile.am  Makefile.in  helmholtz.cpp  laplace.cpp
include/: 2  align.h  alltoall.h  args.h  build_full_tree.h  build_list.h  build_non_adaptive_tree.h  build_tree.h  dataset.h  exafmm_t.h  fmm.h  fmm_base.h  fmm_node.hpp  fmm_scale_invariant.h  fmm_tree.h  fmm_tree.hpp  geometry.h  helmholtz.h  hilbert.h  integration.hpp  interac_list.hpp  interaction_list.h  intrinsics.h  kernel.h  kernel.hpp  laplace.h  laplace_c.h  laplace_cuda.h  local_essential_tree.h  math_wrapper.h  matrix.hpp  matrix.hpp.backup  modified_helmholtz.h  mortonid.hpp  mpi_utils.h  partition.h  permutation.h  precomp_mat.hpp  precompute.h  precompute_c.h  (+14 more)
m4/: ax_blas.m4  ax_compiler_flags.m4  ax_compiler_vendor.m4  ax_ext.m4  ax_fftw.m4  ax_mpi.m4
python/: README.md  exafmm.cpp  exafmm_laplace.cpp  example.ipynb  helmholtz_example.ipynb  laplace_example.ipynb  modified_helmholtz_example.ipynb
src/: .nfs0000000000cdb2a800000931  .nfs0000000000e79b7300000010  geometry.cpp  geometry.do  helmholtz.cpp  kernel.cpp  laplace.cpp  laplace.do  laplace_c.cpp  laplace_cuda.cu  modified_helmholtz.cpp  precompute_helmholtz.cpp  precompute_laplace.cpp  profile.cpp  timer.cpp
tests/: Makefile  Makefile.am  Makefile.in  fmm.cpp  fmm_helmholtz.cpp  fmm_laplace.cpp  fmm_modified_helmholtz.cpp  kernel.cpp  kernel_helmholtz.cpp  kernel_laplace.cpp  kernel_modified_helmholtz.cpp  let.cpp  list.cpp  p2p.cpp  p2p_helmholtz.cpp  p2p_laplace.cpp  p2p_modified_helmholtz.cpp  partition.cpp  tree.cpp
vectorclass/: changelog.txt  vectorclass.h  vectorf128.h  vectorf256.h  vectori128.h  vectori256.h  vectori512e.h  vectormath_trig.h
wrappers/: Makefile.am  Makefile.in  bempp.cpp  bempp.h  bempp_example_helmholtz.cpp  bempp_example_laplace.cpp  bempp_wrapper.cpp  bempp_wrapper.h  bempp_wrapper_example.cpp  bempp_wrapper_helmholtz.h  bempp_wrapper_laplace.h  test_bempp.cpp
wrappers/bempp/: Makefile.am  Makefile.in  README.md  bempp_example_helmholtz.cpp  bempp_example_laplace.cpp  bempp_wrapper.cpp  bempp_wrapper_helmholtz.h  bempp_wrapper_laplace.h
(+12 files in other folders)
