include_HEADERS = include/align.h \
									include/args.h \
									include/build_list.h \
									include/build_non_adaptive_tree.h \
									include/build_tree.h \
									include/dataset.h \
									include/exafmm_t.h \
									include/geometry.h \
									include/hilbert.h \
									include/intrinsics.h \
									include/test.h \
									include/timer.h \
									include/vec.h \
									include/laplace.h \
									include/modified_helmholtz.h \
									include/helmholtz.h

SUBDIRS = tests
