include $(top_srcdir)/Makefile.am.include

noinst_PROGRAMS = 

noinst_PROGRAMS += laplace
laplace_SOURCES = laplace.cpp
laplace_CPPFLAGS = $(PRECISION) $(AM_CPPFLAGS)
laplace_LDADD = $(LIBS_LDADD)

noinst_PROGRAMS += helmholtz
helmholtz_SOURCES = helmholtz.cpp
helmholtz_CPPFLAGS = $(PRECISION) $(AM_CPPFLAGS)
helmholtz_LDADD = $(LIBS_LDADD)
